Revert "Switch mesh export to DAE"
This reverts commit 6694601e239ce06e1935dbee2ed669c9a188e16d.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,12 +14,7 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "Operating System :: POSIX :: Linux",
 ]
-dependencies = [
-    "scipy",
-    "mujoco",
-    "trimesh",
-    "pycollada",
-]
+dependencies = ["scipy", "numpy-stl", "mujoco"]
 
 [project.urls]
 "Hompage" = "https://github.com/Yasu31/mjcf_urdf_simple_converter"
