--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ name="mjcf_urdf_simple_converter"
 version="0.7"
 authors = [{name="Yasunori Toshimitsu", email="yasu313nori@gmail.com"}]
 description = "Minimal script to convert MuJoCo MJCF robot model files to URDF files usable in ROS"
+readme = "README.md"
 requires-python = ">=3.9"
 classifiers = [
     "License :: OSI Approved :: MIT License",
